[package]
name = "alias-processor-rs"
version = "0.1.0"
authors = ["Gawen Arab <g@wenarab.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_log = "0.1.2"
conv = "0.3.3"
flate2 = "1.0.7"
futures = "0.1.27"
log = "0.4.6"
tar = "0.4.26"
zip = { version = "0.5.2", default-features = false, features = ["deflate", "time"] }   # bzip2 not compilable with WASM
#serde = { version = "1.0.94", features = [ "derive" ] }
#serde_derive = "1.0.94"
ed25519 = { package="ed25519-dalek", version = "1.0.0-pre.1" }
# anychain
blake2b = { package = "blake2b_simd", version = "0.5.3" }
lazy_static = "1.3.0"
rand = { version = "0.6", features = [ "wasm-bindgen"] }
#{ version = "0.7.0", features = [ "wasm-bindgen" ] }
base64 = "0.10.1"

# WebAssembly dependencies
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.23"
#web-sys = { version = "0.3.23", features = [ "Blob", "FileReaderSync" ] }
wasm-bindgen = { version = "0.2" } #, features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.3.23"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
